--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,8 @@ development:
   database: s2sboard_development
   pool: 5
   username: root
-  password:
+  password: root
+  socket: /Applications/MAMP/tmp/mysql/mysql.sock
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -20,8 +21,9 @@ test:
   database: s2sboard_test
   pool: 5
   username: root
-  password:
-
+  password: root
+  socket: /Applications/MAMP/tmp/mysql/mysql.sock
+  
 production:
   adapter: mysql2
   database: s2sboard_production
