first stab at homepage controller

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,8 @@ development:
   pool: 5
   username: root
   password: 
- # socket: /Applications/MAMP/tmp/mysql/mysql.sock Fletcher's socket
+  #socket: /Applications/MAMP/tmp/mysql/mysql.sock 
+  #Fletcher's socket
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -22,7 +23,8 @@ test:
   pool: 5
   username: root
   password: 
- # socket: /Applications/MAMP/tmp/mysql/mysql.sock Fletcher's socket
+  #socket: /Applications/MAMP/tmp/mysql/mysql.sock 
+  #Fletcher's socket
   
 production:
   adapter: mysql2
