--- a/config/database.yml
+++ b/config/database.yml
@@ -4,35 +4,28 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   database: s2sboard_development
   pool: 5
-  username: root
+  username: s2sboard
   password: 
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   database: s2sboard_test
   pool: 5
-  username: root
+  username: s2sboard
   password: 
 
 production:
-  adapter: mysql2
+  adapter: postgresql
   database: s2sboard_production
   pool: 5
-  username: root
+  username: s2sboard
   password:
 
-proxied-appfog:
-  adapter: mysql2 
-  database: d78b9cb54116649e9ae828a8d8a212142 
-  username: uBG2Oka3FtIIN 
-  password: pOdWo0ncArQeZ 
-  port: 10000 
-  host: 127.0.0.1
